--- a/styles/main.css
+++ b/styles/main.css
@@ -52,4 +52,14 @@ body {
     max-width: 700px;
 }
 
+@media (max-width: 699px) {
+    :root {
+        font-size: 40%;
+    }
+}
 
+@media (min-width: 700px) {
+    :root {
+        font-size: 62.5%;
+    }
+}
