--- a/styles/partials/page-landing.css
+++ b/styles/partials/page-landing.css
@@ -1,7 +1,3 @@
-:root {
-    font-size: 40%;
-}
-
 #page-landing {
     background-color: var(--color-primary);
 }
@@ -56,7 +52,7 @@
 
 .buttons-container a.study {
     background-color: var(--color-primary-lighter);
-    margin-right: 1.6rem;
+    margin-right: 1.25rem;
 }
 
 .buttons-container a.study:hover {
@@ -80,4 +76,43 @@
 
 .total-connections img{
     margin-left: 0.8rem;
+}
+
+@media(min-width: 1100px) {
+    #page-landing #container {
+        max-width: 1100px;
+        display: grid;
+        grid-template-columns: 2fr 1fr 2fr;
+        grid-template-rows: 350px 1fr;
+        grid-template-areas: 
+        "proffy image image"
+        "buttons buttons texting" ;
+        column-gap: 87px;
+        row-gap: 86px;
+    }
+
+    .logo-container {
+        grid-area: proffy;
+        text-align: initial;
+        align-self: center;
+    }
+    .logo-container img {
+        width: 100%;
+    }
+
+    .hero-image {
+        grid-area: image;
+        height: 350px;
+    }
+    .buttons-container {
+        grid-area: buttons;
+        justify-content: flex-start;
+        margin: 0
+    }
+    .total-connections {
+        grid-area: texting;
+        justify-content: flex-end;
+        margin-right: 5rem;
+        font-size: 1.2rem
+    }
 }
