--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -35,6 +35,7 @@
 .page-header .header-content {
     width: 90%;
     margin: 3.2rem auto;
+    position: relative;
 }
 
 .page-header .header-content strong {
@@ -147,7 +148,7 @@
     margin-top: 0.4rem;
 }
 
-.teacher-item p {
+.teacher-item > p {
     padding: 0 2rem;
     font-size: 1.6rem;
     line-height: 2.8rem;
@@ -198,4 +199,76 @@
 
 .teacher-item footer button img {
     width: 2.4rem
+}
+
+@media (min-width: 700px) {
+    
+    #page-study #container {
+        max-width: 100vw;
+    }
+
+    .page-header {
+        height: 340px;
+    }
+
+    .page-header .top-bar-container {
+        max-width: 1100px;
+    }
+
+    .page-header .header-content {
+        max-width: 740px;
+        flex: 1 1;
+        padding-bottom: 48px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: 0 auto;
+    }
+
+    .page-header .header-content strong {
+        max-width: 350px;;
+    }
+
+    .teacher-item header,
+    .teacher-item footer {
+        padding: 32px;
+    }
+
+    #search-teachers {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 16px;
+        position: absolute;
+        bottom: -28px;
+    }
+
+    #search-teachers label,
+    #search-teachers select,
+    #search-teachers button {
+        font-size: 1.4rem;
+    }
+
+    #search-teachers .select-block {
+        margin-bottom: 0;
+    }
+
+    #page-study main {
+        padding: 32px 0;
+        max-width: 740px;
+        margin: 0 auto;
+    }
+
+    .teacher-item > p {
+        padding: 0 32px;
+    }
+
+    .teacher-item footer p strong {
+        display: initial;
+        margin-left: 16px;;
+    }
+
+    .teacher-item footer button {
+        width: 245px;
+        justify-content: space-evenly;
+    }
 }
